configure.in.in: default parameter to allow cross-compiling in AC_TRY_RUN kresolvertest.cpp: QList -> QPtrList
svn path=/trunk/kdelibs/; revision=132670

--- a/kdecore/configure.in.in
+++ b/kdecore/configure.in.in
@@ -86,6 +86,9 @@ AC_CHECK_FUNC(getaddrinfo,
     [
       AC_MSG_RESULT(no)
       AC_DEFINE(HAVE_BROKEN_GETADDRINFO, 1, [Define if getaddrinfo is broken and should be replaced])
+    ],
+    [
+      AC_MSG_RESULT(cross compiling. We hope so)
     ])
 
     if $kde_gai_ok ; then
