--- a/mimetypes/application/Makefile.am
+++ b/mimetypes/application/Makefile.am
@@ -20,7 +20,7 @@ data_DATA = x-dvi.desktop x-tex-gf.desktop x-gzip.desktop \
 	x-shockwave-flash.desktop x-designer.desktop x-linguist.desktop \
 	x-ogg.desktop x-pkcs12.desktop x-x509-ca-cert.desktop \
 	x-pkcs7-signature.desktop pgp-signature.desktop pgp-encrypted.desktop \
-	x-mswrite.desktop
+	x-mswrite.desktop illustrator.desktop
 
 datadir = $(kde_mimedir)/application
 
