-Compile utils dir [i.e. installtheme]
svn path=/trunk/kdelibs/; revision=132832

--- a/kstyles/Makefile.am
+++ b/kstyles/Makefile.am
@@ -1,2 +1,1 @@
-SUBDIRS = highcolor themes light kthemestyle pics riscos
-#	klegacy riscos web utils
+SUBDIRS = highcolor themes light kthemestyle pics riscos utils
