-Add the initial theme cache
svn path=/trunk/kdelibs/; revision=132839

--- a/kstyles/themes/Makefile.am
+++ b/kstyles/themes/Makefile.am
@@ -7,3 +7,9 @@ data_DATA = qtplatinum.themerc qtcde.themerc qtmotif.themerc qtwindows.themerc \
 datadir = $(kde_datadir)/kstyle/themes
 
 EXTRA_DIST = $(data_DATA)
+
+kthemestylerc: kthemestylerc.in
+	sed s#KDEPATH#$(prefix)# kthemestylerc.in > kthemestylerc
+
+install-data-local: kthemestylerc
+	$(INSTALL) kthemestylerc $(kde_confdir)/
