hm does this help parallel build?
svn path=/trunk/kdelibs/; revision=132848

--- a/ksmartcard/kardlib/Makefile.am
+++ b/ksmartcard/kardlib/Makefile.am
@@ -31,5 +31,5 @@ SUBDIRS =
 
 bin_PROGRAMS = testkdepcsc
 testkdepcsc_SOURCES = teste.cc
-testkdepcsc_LDADD = $(LIB_KDEUI) -lksmartcard
+testkdepcsc_LIBADD = $(LIB_KDEUI) -lksmartcard
 
