Shut up automake 1.5 warnings
svn path=/trunk/kdelibs/; revision=132876

--- a/ksmartcard/kardlib/Makefile.am
+++ b/ksmartcard/kardlib/Makefile.am
@@ -32,5 +32,5 @@ SUBDIRS =
 bin_PROGRAMS = testkdepcsc
 testkdepcsc_SOURCES = teste.cc
 testkdepcsc_LDADD = $(LIB_KDEUI) -lksmartcard
-testkdepcsc: libksmartcard.la
+testkdepcsc$(EXEEXT): libksmartcard.la
 
