Grmbl, srcdir!=builddir should be mandatory ;) I also wonder if creating the file upon make install is ok - but not sure how to change that (is "all: kthemestylerc" enough, or is there some built_data automake thing?)
svn path=/trunk/kdelibs/; revision=132946

--- a/kstyles/themes/Makefile.am
+++ b/kstyles/themes/Makefile.am
@@ -8,8 +8,8 @@ datadir = $(kde_datadir)/kstyle/themes
 
 EXTRA_DIST = $(data_DATA)
 
-kthemestylerc: kthemestylerc.in
-	sed s#KDEPATH#$(prefix)# kthemestylerc.in > kthemestylerc
+kthemestylerc: $(srcdir)/kthemestylerc.in
+	sed s#KDEPATH#$(prefix)# $(srcdir)/kthemestylerc.in > kthemestylerc
 
 install-data-local: kthemestylerc
 	$(INSTALL) kthemestylerc $(kde_confdir)/
