I couldn't find the place where this rc file is used, but the way it hard codes paths is a big nono within KDE. So I replaced KDE_PATH/share/apps/kstyles with '' - and whoever used that should use locate
svn path=/trunk/kdelibs/; revision=133090

--- a/kstyles/themes/Makefile.am
+++ b/kstyles/themes/Makefile.am
@@ -8,8 +8,5 @@ datadir = $(kde_datadir)/kstyle/themes
 
 EXTRA_DIST = $(data_DATA)
 
-kthemestylerc: $(srcdir)/kthemestylerc.in
-	sed s#KDEPATH#$(prefix)# $(srcdir)/kthemestylerc.in > kthemestylerc
+kde_conf_DATA = kthemestylerc
 
-install-data-local: kthemestylerc
-	$(INSTALL) kthemestylerc $(kde_confdir)/
