Added LprSettings class to centralize settings. Basic support for printcap file specified in lpd.conf + LPRng autodetection (stupid mechanism, but it should work in most cases).
svn path=/trunk/kdelibs/; revision=133361

--- a/kdeprint/lpr/Makefile.am
+++ b/kdeprint/lpr/Makefile.am
@@ -6,7 +6,8 @@ libkdeprint_lpr_la_SOURCES = printcapreader.cpp lprhandler.cpp \
 			     matichandler.cpp klprfactory.cpp kmlprmanager.cpp \
 			     kmlpruimanager.cpp lpchelper.cpp lpqhelper.cpp \
 			     kmlprjobmanager.cpp matichelper.cpp \
-			     klprprinterimpl.cpp printcapentry.cpp
+			     klprprinterimpl.cpp printcapentry.cpp \
+			     lprsettings.cpp
 libkdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
 libkdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI)
 libkdeprint_lpr_la_METASOURCES = AUTO
@@ -14,7 +15,8 @@ libkdeprint_lpr_la_METASOURCES = AUTO
 noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
 		 matichandler.h klprfactory.h kmlprmanager.h \
 		 kmlpruimanager.h lpchelper.h lpqhelper.h \
-		 kmlprjobmanager.h matichelper.h klprprinterimpl.h
+		 kmlprjobmanager.h matichelper.h klprprinterimpl.h \
+		 lprsettings.h
 
 #bin_PROGRAMS = make_driver_db_lpd
 #make_driver_db_lpd_SOURCES = make_driver_db_lpd.c
