The XRender check fails for me because of -lXext -lX11 missing in the link line. Strange that ldd says it doesn't link against them. Hmm, and I also wonder why $X_LIBS is gone.
svn path=/trunk/kdelibs/; revision=133506

--- a/kdefx/configure.in.in
+++ b/kdefx/configure.in.in
@@ -7,7 +7,7 @@ if test "$xrender_h" = yes; then
   KDE_CHECK_LIB(Xrender, XRenderComposite, [
     LIB_XRENDER=-lXrender
     AC_DEFINE_UNQUOTED(HAVE_XRENDER, 1, [Defined if your system has XRender support])
-  ], [])
+  ], [], -lXext -lX11 $X_EXTRA_LIBS)
 else
   LIB_XRENDER=
 fi
