--- a/kwallet/client/Makefile.am
+++ b/kwallet/client/Makefile.am
@@ -3,7 +3,7 @@ INCLUDES= -I$(srcdir) $(all_includes)
 
 lib_LTLIBRARIES = libkwalletclient.la
 
-libkwalletclient_la_LDFLAGS = $(all_libraries) -version-info 1:0 -no-undefined
+libkwalletclient_la_LDFLAGS = $(KDE_RPATH) $(all_libraries) -version-info 1:0 -no-undefined
 libkwalletclient_la_LIBADD = $(LIB_QT)
 libkwalletclient_la_SOURCES = 		\
 			       kwalletentry.cc
