- added a spooler type selection widget in config dialog - disabled the old "lpd" plugin in the compilation process   in favour of this new "lpr" plugin. Why?      . provides job management support      . support LPRng as well as LPR      . old "lpd" plugin only provides some basic printer        management feature for RH-printtool (== outdated)      . cannot be worse than the old "lpd" plugin :-)
svn path=/trunk/kdelibs/; revision=133998

--- a/kdeprint/lpr/Makefile.am
+++ b/kdeprint/lpr/Makefile.am
@@ -7,7 +7,7 @@ libkdeprint_lpr_la_SOURCES = printcapreader.cpp lprhandler.cpp \
 			     kmlpruimanager.cpp lpchelper.cpp lpqhelper.cpp \
 			     kmlprjobmanager.cpp matichelper.cpp \
 			     klprprinterimpl.cpp printcapentry.cpp \
-			     lprsettings.cpp
+			     lprsettings.cpp kmconfiglpr.cpp
 libkdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
 libkdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI)
 libkdeprint_lpr_la_METASOURCES = AUTO
@@ -16,7 +16,7 @@ noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
 		 matichandler.h klprfactory.h kmlprmanager.h \
 		 kmlpruimanager.h lpchelper.h lpqhelper.h \
 		 kmlprjobmanager.h matichelper.h klprprinterimpl.h \
-		 lprsettings.h
+		 lprsettings.h kmconfiglpr.h
 
 bin_PROGRAMS = make_driver_db_lpr
 make_driver_db_lpr_SOURCES = make_driver_db_lpr.c
