--- a/kdeprint/lpr/Makefile.am
+++ b/kdeprint/lpr/Makefile.am
@@ -7,7 +7,7 @@ libkdeprint_lpr_la_SOURCES = printcapreader.cpp lprhandler.cpp \
 			     kmlpruimanager.cpp lpchelper.cpp lpqhelper.cpp \
 			     kmlprjobmanager.cpp matichelper.cpp \
 			     klprprinterimpl.cpp printcapentry.cpp \
-			     lprsettings.cpp kmconfiglpr.cpp
+			     lprsettings.cpp kmconfiglpr.cpp apshandler.cpp
 libkdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
 libkdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI)
 libkdeprint_lpr_la_METASOURCES = AUTO
@@ -16,7 +16,7 @@ noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
 		 matichandler.h klprfactory.h kmlprmanager.h \
 		 kmlpruimanager.h lpchelper.h lpqhelper.h \
 		 kmlprjobmanager.h matichelper.h klprprinterimpl.h \
-		 lprsettings.h kmconfiglpr.h
+		 lprsettings.h kmconfiglpr.h apshandler.h
 
 bin_PROGRAMS = make_driver_db_lpr
 make_driver_db_lpr_SOURCES = make_driver_db_lpr.c
@@ -24,3 +24,6 @@ make_driver_db_lpr_LDADD =
 
 entry_DATA = lpr.print
 entrydir = $(kde_datadir)/kdeprint/plugins
+
+miscdata_DATA = apsdriver1 apsdriver2
+miscdatadir = $(kde_datadir)/kdeprint
