remove _LDFLAGS / _LIBADD for the convenience libs. tested on Tru64, FreeBSD and Linux
svn path=/trunk/kdelibs/; revision=134452

--- a/kio/kfile/Makefile.am
+++ b/kio/kfile/Makefile.am
@@ -50,9 +50,7 @@ libkfile_la_SOURCES = kfilebookmark.cpp kfiledialogconf.cpp \
 
 EXTRA_DIST = NOTES
 
-libkfile_la_LDFLAGS = $(KDE_MT_LDFLAGS)
-#libkfile_la_LIBADD = = nothing, undefined references will be checked
-# when creating libkio.la
+# convenience lib - no _LDFLAGS or _LIBADD !
 
 servicetype_DATA = kpropsdlgplugin.desktop
 servicetypedir = $(kde_servicetypesdir)
