need to link with libkdefakes.la
svn path=/trunk/kdelibs/; revision=134809

--- a/kdeprint/lpr/Makefile.am
+++ b/kdeprint/lpr/Makefile.am
@@ -9,7 +9,7 @@ libkdeprint_lpr_la_SOURCES = printcapreader.cpp lprhandler.cpp \
 			     klprprinterimpl.cpp printcapentry.cpp \
 			     lprsettings.cpp kmconfiglpr.cpp apshandler.cpp
 libkdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
-libkdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI)
+libkdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI) $(top_builddir)/kdecore/libkdefakes.la
 libkdeprint_lpr_la_METASOURCES = AUTO
 
 noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
@@ -20,7 +20,7 @@ noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
 
 bin_PROGRAMS = make_driver_db_lpr
 make_driver_db_lpr_SOURCES = make_driver_db_lpr.c
-make_driver_db_lpr_LDADD =
+make_driver_db_lpr_LDADD = $(top_builddir)/kdecore/libkdefakes.la
 
 entry_DATA = lpr.print
 entrydir = $(kde_datadir)/kdeprint/plugins
