CVS_SILENT Added Encoding header for compliance with Desktop Entry Standard
svn path=/trunk/kdebase/kcontrol/crypto/; revision=134824

--- a/security/crypto/crypto.desktop
+++ b/security/crypto/crypto.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=lock
 Type=Application
 Exec=kcmshell crypto
@@ -7,7 +8,8 @@ X-KDE-ModuleType=Library
 X-KDE-Library=crypto
 
 Name=Crypto
-Name[af]=KRIPTO
+Name[af]=kripto
+Name[ar]=التشفير
 Name[az]=Şifrləmə
 Name[bg]=Криптиране
 Name[bs]=Kriptografija
@@ -21,9 +23,10 @@ Name[et]=Krüpto
 Name[fi]=Salaus
 Name[fr]=Cryptographie
 Name[gl]=Cifrado
-Name[he]=הנפצה
+Name[he]=הצפנה
 Name[hr]=Kriptografija
 Name[hu]=Titkosítás
+Name[id]=Kripto
 Name[is]=Dulritun
 Name[it]=Crittografia
 Name[ja]=暗号
@@ -32,42 +35,49 @@ Name[lt]=Šifravimas
 Name[lv]=Kripto
 Name[mk]=Криптографија
 Name[mt]=Kriptografija
-Name[no]=Kryptering
-Name[no_NY]=Krypto
+Name[nb]=Kryptering
+Name[nn]=Krypto
 Name[pl]=Kryptografia
-Name[pt_BR]=Criptografia
 Name[pt]=Cifra
+Name[pt_BR]=Criptografia
 Name[ru]=Криптование
 Name[sk]=Šifrovanie
 Name[sl]=Kripto
 Name[sr]=Kriptografija
 Name[sv]=Krypto
 Name[ta]=Á¨ÈÂ£ðÎ
+Name[th]=การเข้ารหัส
 Name[tr]=Şifreleme
 Name[uk]=Крипто
 Name[vi]=Mật mã 
 Name[wa]=Criptografeye
-Name[zh_CN.GB2312]=加密
-Name[zh_TW.Big5]=加密
+Name[xh]=Imfihlo
+Name[xx]=xx
+Name[zh_CN]=加密
+Name[zh_TW]=加密
+Name[zu]=Imfihlo kwi
 Comment=Configure SSL, manage certificates, and other cryptography settings
-Comment[af]=KONFIGUREER SSL, BESTUUR SERTIFIKATE, EN ANDER KRIPTOGRAFIE INSTELLINGS
+Comment[af]=konfigureer ssl, bestuur sertifikate, en ander kriptografie instellings
+Comment[ar]=تعريفات SSL, ادارة شهادات الإعتمادية, بالإضافة الى خدمات الترميز الأخرى
 Comment[az]=SSL,vəsiqə,vəsiqə qurğuları,digər şifrləmə qurğuları
 Comment[bg]=Настройка на SSL, управление на сертификата и други параметри закриптиране
 Comment[bs]=Postavke SSL, upravljanje certifikatima i ostalim kriptografskim postavkama
 Comment[ca]=Configura SSL, gestiona certificats, i altres valors de criptografia
 Comment[cs]=Nastavení SSL, správa certifikátů a ostatní kryptografická nastavení
-Comment[da]=Indstil SSL, håndtér certifikater, og andre kryptografiske indstillinger
+Comment[da]=Indstil SSL, håndtér certifikater og andre kryptografiske indstillinger
 Comment[de]=SSL einrichten, Zertifikate verwalten und andere Einstellungen zur Verschlüsselung von Daten vornehmen
 Comment[el]=Ρύθμιση SSL, διαχείριση πιστοπιητικών, και άλλες ρυθμίσεις κρυπτογραφίας
 Comment[eo]=Agordo de SSL, administrado de atestiloj kaj aliaj aferoj rilate ĉifradon
 Comment[es]=Configura SSL, administra los certificados y otras opciones de criptografía.
 Comment[et]=SSL seadistamine, sertifikaatide haldamine jms.
+Comment[eu]=SSL konfiguratu, ziurtagiriak kudeatu, eta kriptologiarekin zerikusrik duten bertze tresnak
 Comment[fi]=Aseta SSL:ää, hallitse sertifikaatteja, ja muut kryptografia-asetukset
 Comment[fr]=Configuration de SSL, de la cryptographie et gestion des certificats
 Comment[gl]=Configurar SSL, xestionar certicados, e outras configuracións de cifrado
-Comment[he]=תודועת לוהינו ,תורחא הנפצה תורדגהו SSL-ה תורדגה יוניש
+Comment[he]=שינוי ההגדרות של SSL, ניהול תעודות, והגדרות הצפנה אחרות
 Comment[hr]=Postavke SSL, upravljanje certifikatima i ostalim kriptografskim postavkama
 Comment[hu]=Az SSL beállítása, a tanúsítványok kezelése és más titkosítási beállítások
+Comment[id]=Konfigurasi SSL, manaje sertifikat, dan seting kriptografi lainnya
 Comment[is]=Stilla SSL, vinna með skilríki og aðrar stillingar dulritunar
 Comment[it]=Configura SSL, gestisce certificati e altre impostazioni crittografiche
 Comment[ja]=SSLの設定,証明書の管理,その他の暗号作成形式設定
@@ -76,41 +86,46 @@ Comment[lt]=Derina SSL, tvarko sertifikatus ir kitus šifravimo parametrus
 Comment[lv]=Konfigurēt SSL, menedžēt sertifikātus, un citus kriptogrāfijas uzstādījumus
 Comment[mk]=Конфигурација на SSL, менаџмент на сертификати и други криптографски поставки
 Comment[mt]=Ikkonfigura l-SSL, immaniġġja ċertifikati, u konfigurazzjoni oħra tal-kriptografijaConfigure SSL, manage certificates, and other cryptography setings
+Comment[nb]=Konfigurering av SSL, behandling av sertifikater og andre krypteringsinnstillinger
 Comment[nl]=configureer SSL, beheer certificaten, en andere cryptografische instellingen
-Comment[no]=Konfigurering av SSL, behandling av sertifikater og andre krypteringsinnstillinger
-Comment[no_NY]=Oppsett av SSL, sertifikat og andre krypteringsinnstillingar
+Comment[nn]=Oppsett av SSL, sertifikat og andre krypteringsinnstillingar
 Comment[oc]=Configura SSL, gestiona certificats, e autres valors de criptografia
 Comment[pl]=Konfiguracja SSL, zarządzanie certyfikatami, inne ustawienia kryptograficzne
-Comment[pt_BR]=Configura SSL, gerencia certificados, e outras configurações de criptografia
 Comment[pt]=Configurar o SSL, gerir certificados e outras configurações de cifra
+Comment[pt_BR]=Configurar SSL, gerencia certificados, e outras configurações de criptografia
 Comment[ro]=Configurează SSL, administrează certificate şi alte setări criptografice
 Comment[ru]=Настройка SSL, управление сертификатами и другими параметрами криптования
-Comment[sk]=Konfigurácia SSL, manažment certifikátov, a iné kryptografické nastavenia
+Comment[sk]=Konfigurácia SSL, správa certifikátov a iné kryptografické nastavenia
 Comment[sl]=Prikroji SSL, urejaj certifikate in ostale nastavitve šifriranja
-Comment[sr]=Konfiguriši SSL, upravljajte sertifikatima i drugim kriiptografskim podešavanjima
+Comment[sr]=Konfigurišite SSL, upravljajte sertifikatima i drugim kriiptografskim podešavanjima
 Comment[sv]=Anpassa SSL, hantera certifikat, samt andra kryptografiska inställningar
 Comment[ta]=SSL ÅÊÅ¨ÁôÒ, ¿üº¡ýÈ¢¾ú¸¨Ç §ÁÄ¡ñ¨Á, ÁüÚõ ­¾Ã Á¨ÈÂ£ðÎ «¨ÁôÒì¸û
+Comment[th]=ปรับแต่ง SSL, จัดการการรับรอง และตั้งการการเข้ารหัสอื่นๆ
 Comment[tr]=SSL,sertifika,sertifika ayarları,diğer şifreleme ayarları
 Comment[uk]=Настроює SSL, керує сертифікатами та іншими параметрами криптографії
 Comment[vi]=Cấu hình SSL, quản lí giấy chứng nhận và các thiết lập vềEmật mã khác 
-Comment[zh_CN.GB2312]=配置 SSL,管理证书,和其它的加密设置
-Comment[zh_TW.Big5]=設定 SSL，管理憑證，以及其它加密的設定
+Comment[xh]=Qwalasela SSL, yenza iziqinisekiso,kunye nezinye izicwangciso zokufihlakeleyo
+Comment[xx]=xx
+Comment[zh_CN]=配置 SSL,管理证书,和其它的加密设置
+Comment[zh_TW]=設定 SSL,管理憑證,和其它的加密設定
+Comment[zu]=Hlanganisela iSSL, phatha izitifiketi noma ezinye izilungiso zokufihlakeleyo
 
 Keywords=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,ciphers,TLS,secure,security
-Keywords[af]=KRIPTO,KRIPTO,KRIPTOgraphy,ENKRIPSIE,SSL,HTTPS,SERTIFIKATE,VERSYFERAARS,TLS,BEVEILIG,SEKURITEIT
+Keywords[ar]=الترميز,Krypto,الترميز,الترميز,SSL,https,شهادات الإعتماد,ciphers,TLS,آمن,الأمن
 Keywords[az]=Şifr,şifrləmə,kriptoqrafiya,SSL,https,vəsiqə,TLS,təhlüükəsizlik,e'tibarlı
 Keywords[ca]=Cripto,Kripto,Criptografia,encriptació,SSL,https,certificats,xifrat,TLS,segur,seguretat
 Keywords[cs]=Kryptografie,Šifrování,SSL,https,Certifikáty,Kódy,Krypto,TLS,bezpečnost
-Keywords[da]=Crypto,Krypto,Kryptografi,indkodning,SSL,https,certifikater,cifre,TLS,sikker,sikkerhed
+Keywords[da]=Crypto,Krypto,Kryptografi,indkodning,SSL,https,certifikater,chifre,TLS,sikker,sikkerhed
 Keywords[de]=Chiffrierung,Crypto,Krypto,Kryptographie,Verschlüsselung,SSL,https,Zertifikate,TLS,Sicherheit
 Keywords[el]=Κρυπτογραφία,Κρυπτογράφηση,SSL,https,πιστοποιητικά,cipher,TLS,secure,ασφάλεια
 Keywords[eo]=ĉifrado,SSL,HTTPS,atestoj,ĉifroj,TLS,sekureco
 Keywords[es]=Criptografía,encriptación,SSL,https,certificados,cifrados,TLS,seguro,seguridad
 Keywords[et]=Crypto,Krüpto,Krüptograafia,krüpteerimine,SSL,https,sertifikaadid,šifrid,TLS,tuvaline,turvalisus
 Keywords[fi]=Salaus,Krypto,SSL,https,sertifikaatit,salaimet,TLS,turvallinen,turvallisuus
-Keywords[fr]=crypto,krypto,cryptographie,cryptage,encryptage,chiffrage,SSL,https,certificats,TLS,sécurité
-Keywords[he]=החטבא,חטבואמ,TLS,םינפצ,תודועת,https,SSL,הנפצה
+Keywords[fr]=crypto,krypto,cryptographie,cryptage,encryptage,chiffrage,ssl,https,certificats,tls,sécurité
+Keywords[he]=מאובטח,אבטחה,TLS,תעודות,צפנים,https,SSL,הצפנה
 Keywords[hu]=Crypto,Krypto,kriptográfia,titkosítás,SSL,https,tanúsítványok,kódolás,TLS,biztonságos,biztonság
+Keywords[id]=Kripto,Kriptografi,enkripsi,SSL,https,sertifikat,ciphers,TLS,secure,security
 Keywords[is]=Dulritun,Dulmál,Krypto,SSL,https,skilríki,brenglun,TLS,öryggi,öruggt
 Keywords[it]=crittografia,cifratura,SSL,https,certificati,cifrari,TLS,sicurezza
 Keywords[ja]=暗号化,Krypto,暗号作成形式,暗号化,SSL,http,証明書,暗号,TLS,セキュア,セキュリティ
@@ -118,12 +133,12 @@ Keywords[ko]=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,cipher
 Keywords[lt]=Crypto,Krypto,Cryptography,kriptografija,encryption,šifravimas,SSL,https,certificates,sertifikatai,ciphers,šifrai,TLS,secure,saugus,security,saugumas,apsauga
 Keywords[lv]=Kripto,Kriptogrāfija,kodēšana,SSL,https,sertifkāti,kiperi,TLS,droši,drošība
 Keywords[mt]=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,ciphers,TLS,secure,security,kriptografija
+Keywords[nb]=Krypto,Kryptering,SSL,https,sertifikater,ciphers
 Keywords[nl]=crypto,krypto,cryptografie,encryptie,ssl,https,certificaten,ciphers,tls,beveiliging,veilig,codering,gecodeerd
-Keywords[no]=Krypto,Kryptering,SSL,https,sertifikater,ciphers
-Keywords[no_NY]=Crypto,Krypto,kryptering,SSL,https,sertifikat,TLS,sikker,tryggleik
+Keywords[nn]=Crypto,Krypto,kryptering,SSL,https,sertifikat,TLS,sikker,tryggleik
 Keywords[pl]=Krypto,Kryptografia,szyfrowanie,SSL,https,ceryfikaty,szyfry,TLS,bezpieczny,bezpieczeństwo
-Keywords[pt_BR]=Crypto,Krypto,Criptografia,encriptação,SSL,https,certificados,cifras
 Keywords[pt]=Cifra,Criptografia,encriptação,SSL,https,certificados,cifras,TLS,seguro,segurança
+Keywords[pt_BR]=Cripto,Krypto,Criptografia,criptografia,SSL,https,certificados,cifras,TLS,seguro,segurança
 Keywords[ro]=crypto,criptografie,criptare,SSL,https,certificate,cifrare,TLS,sigur,securitate
 Keywords[sk]=Crypto,Krypto,Kryptografia,kryptovanie,SSL,https,certifikáty,šifra,TLS,zabezpečenie,bezpečnosť
 Keywords[sl]=Kripto,Kriptografija,šifriranje,SSL,https,certifikati,šifrirni algoritmi,TLS,varnost,varno
@@ -131,5 +146,9 @@ Keywords[sv]=Crypto,Krypto,Kryptografi,kryptering,SSL,https,certifikat,krypton,T
 Keywords[tr]=Şifre,şifreleme,şifrebilim,SSL,https,sertifika,TLS,güvenlik,güvenli
 Keywords[uk]=крипто,криптографія,Cryptography,шифрування,SSL,https,TLS,сертифікати,шифри,Crypto,Krypto,безпека,безпечність
 Keywords[vi]=Mật mã,Krypto,Mật mã học,mã hóa,SSL,https, giấy chứng nhận, mật mã, TLS, bảo mật, bảo đảm 
-Keywords[zh_CN.GB2312]=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,ciphers,TLS,secure,security,加密,加密学,证书,密码,安全
+Keywords[xh]=Imfihlo,imfihlo,okufihlakeleyo,ufihlo,SSL,https,iziqinisekiso,imibhalo efihlakeleyo,TLS,khusela,ukhuseleko
+Keywords[xx]=xx
+Keywords[zh_CN]=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,ciphers,TLS,secure,security,加密,加密学,证书,密码,安全
+Keywords[zh_TW]=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,ciphers,TLS,secure,security,加密,加密學,証書,密碼,安全
+Keywords[zu]=Imfihlo,imfihlo,okufihlakeleyo,ufihlo,SSL,https,izitifiketi,imibhaloefihlakeleyo,TLS,vikela uvikelo
 
