--- a/khtml/rendering/Makefile.am
+++ b/khtml/rendering/Makefile.am
@@ -24,7 +24,7 @@ libkhtmlrender_la_SOURCES = \
 	bidi.cpp break_lines.cpp \
 	render_style.cpp render_object.cpp render_container.cpp render_box.cpp \
 	render_flow.cpp render_text.cpp \
-	render_image.cpp render_table.cpp render_hr.cpp \
+	render_image.cpp render_table.cpp \
 	render_replaced.cpp render_form.cpp render_list.cpp \
 	render_root.cpp render_frames.cpp render_br.cpp render_applet.cpp \
 	render_html.cpp render_body.cpp
@@ -32,7 +32,7 @@ libkhtmlrender_la_SOURCES = \
 libkhtmlrender_la_METASOURCES = AUTO
 
 noinst_HEADERS = \
-	bidi.h break_lines.h render_hr.h \
+	bidi.h break_lines.h \
 	render_style.h render_object.h render_container.h render_box.h \
 	render_flow.h render_text.h render_box.h render_replaced.h \
 	render_form.h render_list.h render_root.h render_frames.h \
