Sneaking in the updated Makefile.am before David catches me
svn path=/trunk/kdelibs/; revision=135456

--- a/doc/common/Makefile.am
+++ b/doc/common/Makefile.am
@@ -6,10 +6,10 @@ commondir = $(kde_htmldir)/en/common
 
 common_DATA = artistic-license.html bottom1.png bottom2.png bsd-license.html \
 	doctop1.png doctop2.png fdl-license fdl-license.html gpl-license \
-	gpl-license.html kde-common.css kde-default.css \
+	gpl-license.html kde-common.css kde-default.css kde-web.css \
 	kde-localised.css.template lgpl-license lgpl-license.html \
-	qpl-license.html shadow.png \
-	x11-license.html xml.dcl \
+	qpl-license.html shadow.png web-docbottom.png \
+	x11-license.html xml.dcl web-doctop.png \
 	doctop1a.png doctop1b.png 1.png 2.png 3.png 4.png 5.png 6.png \
 	7.png 8.png 9.png 10.png
 
