--- a/khtml/rendering/Makefile.am
+++ b/khtml/rendering/Makefile.am
@@ -27,7 +27,7 @@ libkhtmlrender_la_SOURCES = \
 	render_image.cpp render_table.cpp \
 	render_replaced.cpp render_form.cpp render_list.cpp \
 	render_root.cpp render_frames.cpp render_br.cpp render_applet.cpp \
-	render_html.cpp render_body.cpp
+	render_html.cpp render_body.cpp font.cpp
 
 libkhtmlrender_la_METASOURCES = AUTO
 
@@ -36,7 +36,7 @@ noinst_HEADERS = \
 	render_style.h render_object.h render_container.h render_box.h \
 	render_flow.h render_text.h render_box.h render_replaced.h \
 	render_form.h render_list.h render_root.h render_frames.h \
-	render_br.h render_applet.h
+	render_br.h render_applet.h font.h
 
 INCLUDES = -I$(top_srcdir)/kimgio -I$(top_srcdir)/kio -I$(top_srcdir)/dcop \
  -I$(top_srcdir)/kfile -I$(top_srcdir)/khtml -I$(top_srcdir) $(all_includes)
