Move KAction{Ptr}ShortcutList out of kaction.h and into new header file kactionshortcutlist.h.
svn path=/trunk/kdelibs/; revision=136084

--- a/kdeui/Makefile.am
+++ b/kdeui/Makefile.am
@@ -48,7 +48,7 @@ include_HEADERS = kprogress.h kcolordlg.h kcolordialog.h kselect.h \
 		kdualcolorbtn.h kdualcolorbutton.h ktoolbarbutton.h \
 		ktoolbarradiogroup.h ktextbrowser.h kaction.h khelpmenu.h \
 		kcmodule.h kcmenumngr.h kpanelmenu.h kpanelappmenu.h \
-		kstdaction.h kcombobox.h \
+		kactionshortcutlist.h kstdaction.h kcombobox.h \
 		kiconview.h klistview.h klistbox.h kbugreport.h kpassdlg.h \
 		kxmlguiclient.h kxmlgui.h kxmlguibuilder.h kxmlguifactory.h \
 		kpixmapio.h kwordwrap.h \
