need libkdefakes for snprintf under tru64
svn path=/trunk/kdelibs/; revision=136123

--- a/arts/flow/Makefile.am
+++ b/arts/flow/Makefile.am
@@ -15,7 +15,7 @@ libartsflow_idl_la_LDFLAGS = -no-undefined -version-info 1:0
 libartsflow_idl_la_LIBADD = $(top_builddir)/arts/mcop/libmcop.la $(LIBPOSIX4)
 
 libartsflow_la_LIBADD = $(top_builddir)/arts/mcop/libmcop.la libartsflow_idl.la $(LIBAUDIOFILE) $(LIBASOUND) $(LIBAUDIOIO) $(LIBOSSAUDIO) $(LIBAUDIONAS) -lm \
-  $(top_builddir)/arts/flow/gsl/libgsl.la
+  $(top_builddir)/arts/flow/gsl/libgsl.la $(top_builddir)/kdecore/libkdefakes.la
 libartsflow_la_LDFLAGS = -no-undefined -version-info 1:0
 libartsflow_la_COMPILE_FIRST = artsflow.h
 libartsflow_la_SOURCES =  synth_play_impl.cc \
