add the menu item for html views
svn path=/trunk/kdelibs/; revision=136611

--- a/khtml/khtml_browser.rc
+++ b/khtml/khtml_browser.rc
@@ -18,6 +18,7 @@
   <Action name="viewFrameSource" />
   <Action name="security" />
   <Action name="setEncoding" />
+  <Action name="useStylesheet" />
 <!--
   <Separator />
   <Action name="debugRenderTree" />
