- Fixed a problem in APS handler of LPR plugin - Added direct support for Foomatic driver DB into CUPS   plugin (no need to install the whole PPD set from foommatic)
svn path=/trunk/kdelibs/; revision=136903

--- a/kdeprint/Makefile.am
+++ b/kdeprint/Makefile.am
@@ -32,7 +32,7 @@ noinst_HEADERS = kmdbentry.h kmfactory.h kmjob.h kmjobmanager.h \
 		 kpqtpage.h kprintprocess.h kmthreadjob.h kpipeprocess.h kdeprintd.h \
 		 kpfilterpage.h kmspecialmanager.h kdeprintcheck.h plugincombobox.h \
 		 kfilelist.h kpfileselectpage.h treecombobox.h kxmlcommand.h \
-		 util.h
+		 util.h driverparse.h
 
 include_HEADERS = kprinter.h kprintaction.h
 
@@ -72,3 +72,6 @@ noinst_DATA = kdeprint
 kdeprint:
 	$(LN_S) $(srcdir)/management kdeprint
 
+# convenience static library
+noinst_LIBRARIES = libdriverparse.a
+libdriverparse_a_SOURCES = driverparse.c
