--- a/kdeprint/lpr/Makefile.am
+++ b/kdeprint/lpr/Makefile.am
@@ -22,7 +22,7 @@ noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
 
 bin_PROGRAMS = make_driver_db_lpr
 make_driver_db_lpr_SOURCES = make_driver_db_lpr.c
-make_driver_db_lpr_LDADD = $(top_builddir)/kdecore/libkdefakes.la
+make_driver_db_lpr_LDADD = $(top_builddir)/kdecore/libkdefakes.la ../libdriverparse.a
 
 entry_DATA = lpr.print
 entrydir = $(kde_datadir)/kdeprint/plugins
