+testdcopc_LDFLAGS = $(KDE_RPATH) $(all_libraries) Patch by Sean McGlynn <sean@tmiau.com>
svn path=/trunk/kdelibs/; revision=136929

--- a/dcop/Makefile.am
+++ b/dcop/Makefile.am
@@ -57,6 +57,7 @@ testdcop_LDFLAGS = $(KDE_RPATH) $(all_libraries)
 testdcop_SOURCES = testdcop.cpp
 testdcop_LDADD = ../kdecore/libkdecore.la
 
+testdcopc_LDFLAGS = $(KDE_RPATH) $(all_libraries)
 testdcopc_SOURCES = testdcopc.c dcopc.c
 testdcopc_LDADD =  KDE-ICE/libkICE.la $(LIBSM)
 
